# seed-bank

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  ENHANCED_METRICS.md  GET_ENDPOINTS_IMPLEMENTATION_PLAN.md  Makefile  README.md  README_API.md  TESTING.md  TESTING_PHASE_1_2.md  Tiltfile  alembic.ini  compose.override.example.yaml  compose.prod.yaml  compose.yaml  docker-compose.yml  docker-entrypoint.sh  env.example  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.claude/: settings.json  settings.local.json.example
.claude/agents/: backend-engineer.md  db-architect.md  devops-helper.md  frontend-engineer.md  ml-platform.md  mobile-engineer.md  security-reviewer.md  test-writer.md
.claude/commands/: check.md  grade-pr.md  new-issue.md  new-migration.md  open-pr.md  scaffold-feature.md
.claude/hooks/: check-doc-staleness.sh  format-python.sh  guard-bash.sh  inject-stack-reminder.sh  typecheck-changed.sh
.claude/memory/: MEMORY.md  conventions.md  decisions.md  known-issues.md  workflow.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: build.yml  check.yml  ci.yml  smoke.yml  test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_baseline.py  0002_batch_share_token.py  0003_batch_source_mobile.py  0004_drop_traffic_mlflow.py  0005_drop_api_keys.py  0006_oauth_google_only.py  0007_scan_batch_result_video.py  002_remove_redundant_columns.py  003_add_multi_seed_support.py  004_add_share_token.py
app/: __init__.py  crud.py  database.py  limits.py  models.py  observability.py
app/ml/: __init__.py  detection_pipeline.py  model_builders.py  model_manager.py
docs/: DOCS Starter Version.docx  DOCUMENTATION_V2.docx  activity-diagram.mmd  activity-log.md  architecture-diagram.mmd  class-diagram-part1.mmd  class-diagram-part2.mmd  class-diagram.mmd  claude-config.md  data-flow-diagram.mmd  deployment-diagram.mmd  erd-diagram-part1.mmd  erd-diagram-part2.mmd  graduation-requirements.md  operations.md  presentation.md  revamp-status.md  sequence-batch-analysis.mmd  sequence-view-batch-details.mmd  sequence-view-history.mmd  sequence-view-statistics.mmd  system-overview.md  use-case-diagram.mmd
docs/adr/: 0001-frontend-backend-overhaul.md
docs/diagrams/: 01-system-context.md  02-containers-app.mmd  02-containers-datastores.mmd  02-containers-tooling.mmd  02-containers.md  03-api-components-data.mmd  03-api-components-flow-routing.mmd  03-api-components-flow-services.mmd  03-api-components-flow.mmd  03-api-components.md  04-worker-components-flow.mmd  04-worker-components-pipeline-classify.mmd  04-worker-components-pipeline-detect.mmd  04-worker-components-pipeline.mmd  04-worker-components.md  05-db-erd-auth-audit.mmd  05-db-erd-auth-identity.mmd  05-db-erd-auth.mmd  05-db-erd-core.mmd  05-db-erd-ml-experiments.mmd  05-db-erd-ml-registry.mmd  05-db-erd-ml.mmd  05-db-erd-scan-intake.mmd  05-db-erd-scan-results.mmd  05-db-erd-scan.mmd  05-db-erd.md  06-analyze-sequence.md  07-batch-state-machine.md  08-auth-sequence.md  09-ml-platform.md  10-deployment-build-images.mmd  10-deployment-build-stages.mmd  10-deployment-runtime-app.mmd  10-deployment-runtime-datastores.mmd  10-deployment-runtime-tooling.mmd  10-deployment.md  11-gantt.mmd  12-usecase.mmd  12a-usecase-farmer.mmd  12b-usecase-dev.mmd  (+18 more)
docs/presentation/: .gitignore  README.md  presentation.md
docs/report/: main.tex  references.bib
frontend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  components.json  dashboard.js  enhancements.css  eslint.config.js  index.html  nginx.conf  openapi.json  package-lock.json  package.json  script.js  style.css  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx  router.tsx
legacy/: ANTIGRAVITY_PROMPT.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  patch_main.py  requirements.txt
legacy/docs/: DOCUMENTATION_V2.docx  activity-diagram.mmd  architecture-diagram.mmd  deployment-diagram.mmd  erd-diagram.mmd  sequence-view-batch-details.mmd  sequence-view-statistics.mmd
legacy/frontend/: package-lock.json  package.json  script.js  tailwind.config.js
legacy/tests/: test_batch_api.py  test_confidence_metrics.py
mobile/: .gitignore  App.tsx  CLAUDE.md  README.md  app.json  index.ts  package-lock.json  package.json  tsconfig.json
notebooks/: graduation-project-demo-me.ipynb
ops/postgres/: init.sql
ops/prometheus/: prometheus.yml
scripts/: _docx_fix_tables.py  _docx_polish.py  backfill_dwh.py  build_docx.sh  init_clickhouse.py  make_reference_docx.py  provision_smoke_model.py  register_model.py  register_seed_bank_app_models.py  render_diagrams.sh  run_experiment.py  run_local_gpu_worker.sh  seed_dev.py  smoke.sh  swap_detector_weights.py
secrets/: README.md
src/seedbank/: main.py
tests/: conftest.py  test_api.py
tests/api/: test_analytics_export_compare.py  test_analyze.py  test_data_management.py  test_fast_mode_config.py  test_hardening.py  test_health_and_config.py  test_history_and_stats.py  test_image_serving.py  test_observability.py  test_openapi.py  test_reports.py
tests/e2e/: conftest.py  test_analyze_endpoint.py  test_batch_image_urls_endpoint.py  test_batches_endpoint.py  test_bootstrap_admin.py  test_catalog_endpoint.py  test_dataset_import_endpoint.py  test_datasets_endpoint.py  test_envelopes.py  test_experiments_endpoint.py  test_model_performance_endpoint.py
tests/factories/: __init__.py  user.py
tests/integration/: conftest.py  test_api_keys.py  test_auth_flow.py  test_baseline_migration.py  test_crud.py  test_dwh_dualwrite.py  test_metrics_endpoint.py  test_model_registry_service.py  test_models_api.py  test_rbac.py  test_refresh_token_replay.py  test_scan_batch_repository.py  test_scan_image_repository.py  test_seed_detection_seed_type.py  test_seed_type_repository.py  test_supplier_repository.py  test_user_repository.py
tests/unit/: test_analysis_service.py  test_sentry.py  (+33 more)
(+302 files in other folders)
